force-app/main/default/objects/ComplexReports__c/ComplexReports__c.object-meta.xml
<CustomObject>
    <label>ComplexReport</label>
    <nameField>
        <label>ComplexReports Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ComplexReports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>