force-app/main/default/objects/ComplexReports__c/fields/AccpacAcountNo__c.field-meta.xml
<CustomField>
    <fullName>AccpacAcountNo__c</fullName>
    <label>Accpac Acount No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>