force-app/main/default/objects/ComplexReports__c/fields/Actual_Occurance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Occurance__c</fullName>
    <label>Actual Occurance</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>