force-app/main/default/objects/ComplexReports__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <label>Order Product Created Date</label>
    <type>DateTime</type>
</CustomField>