force-app/main/default/objects/ComplexReports__c/fields/ExpectedOccurance__c.field-meta.xml
<CustomField>
    <fullName>ExpectedOccurance__c</fullName>
    <label>Expected Occurance</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>