force-app/main/default/objects/ComplexReports__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <label>OrderNumber</label>
    <length>12</length>
    <type>Text</type>
</CustomField>