force-app/main/default/objects/ComplexReports__c/fields/Product_Last_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Last_Service_Date__c</fullName>
    <label>Product Last Service Date</label>
    <type>DateTime</type>
</CustomField>