force-app/main/default/objects/ComplexReports__c/fields/Season_End__c.field-meta.xml
<CustomField>
    <fullName>Season_End__c</fullName>
    <label>Season End</label>
    <type>Date</type>
</CustomField>