force-app/main/default/objects/ComplexReports__c/fields/Season_Start__c.field-meta.xml
<CustomField>
    <fullName>Season_Start__c</fullName>
    <label>Season Start</label>
    <type>Date</type>
</CustomField>