force-app/main/default/objects/ComplexReports__c/fields/Seasonal_Order__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seasonal Order</label>
    <type>Checkbox</type>
</CustomField>