force-app/main/default/objects/ComplexReports__c/fields/Service_Variance__c.field-meta.xml
<CustomField>
    <fullName>Service_Variance__c</fullName>
    <formula>ExpectedOccurance__c - Actual_Occurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>