force-app/main/default/objects/ComplexReports__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <label>Shipping Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>