force-app/main/default/objects/ComplexReports__c/fields/WorkOrderCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderCreatedDate__c</fullName>
    <label>WorkOrderCreatedDate</label>
    <type>DateTime</type>
</CustomField>