force-app/main/default/objects/ComplexReports__c/fields/WorkOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderNumber__c</fullName>
    <label>WorkOrderNumber</label>
    <length>12</length>
    <type>Text</type>
</CustomField>